--- a/public/css/library.css
+++ b/public/css/library.css
@@ -12,8 +12,22 @@
 body {
   width: 100vw;
   height: 100vh;
+  font-size: initial;
+  font-family: Raleway;
+  line-height: initial;
   margin: 0;
   background-color: #B4CDED;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Raleway;
+  font-weight: 700;
+  margin: initial;
 }
 
 #top-nav {
@@ -24,16 +38,16 @@ body {
   display: grid;
   height: 100vh;
   width: 100vw;
-  grid-template-areas: "left-nav main right-nav";
-  grid-template-columns: 15% 70% 15%;
-  justify-items: center;
   margin: auto;
+  grid-template-areas: "left-nav main right-nav";
+  grid-template-columns: 200px auto 200px;
+  justify-items: center;
 }
 
 #left-nav {
   display: grid;
   grid-area: left-nav;
-  width: 100%;
+  width: 200px;
   height: 100%;
   grid-template-rows: 5% 20% 3% auto auto 5% 5%;
   row-gap: 2vh;
@@ -47,7 +61,11 @@ body {
 }
 
 #left-nav #logo img {
-  width: 50%;
+  width: 130px;
+}
+
+#left-nav #logo h1 {
+  font-size: 25pt;
 }
 
 #left-nav #menu {
@@ -109,18 +127,21 @@ a [href="/logout"] {
 }
 
 #right-nav {
-  width: 100%;
+  width: 200px;
   height: 100%;
-  padding: 20px;
+  padding: 10px;
   grid-area: right-nav;
   background-color: #0D1821;
 }
 
 #right-nav h1 {
+  margin-top: 40px;
   font-size: 20pt;
+  text-align: center;
 }
 
 #right-nav #music-suggestion-container {
+  margin-top: 40px;
   display: grid;
   row-gap: 15px;
 }
@@ -134,7 +155,7 @@ a [href="/logout"] {
 }
 
 #right-nav #music-suggestion-container .suggested-song img {
-  width: 100%;
+  width: 100px;
   border-radius: 7px;
 }
 
@@ -147,26 +168,32 @@ a [href="/logout"] {
 
 #right-nav #music-suggestion-container .suggested-song h3 {
   width: fit-content;
-  margin: 0;
   font-size: 10pt;
   color: #B4CDED;
 }
 
+.material-symbols-outlined,
+#post-container,
+#postForm {
+  /*To test if everything is there*/
+  background-color: #0D1821;
+}
+
 @media screen and (max-width: 1200px) {
   #general-container {
-    display: grid;
+    overflow-y: hidden;
     height: inherit;
     width: inherit;
     margin: auto;
-    grid-template-areas: "top-nav" "main";
-    grid-template-columns: auto;
+    grid-template-areas: "top-nav top-nav" "main right-nav";
+    grid-template-columns: auto 150px;
     grid-template-rows: 10vh auto;
     justify-items: center;
   }
   #top-nav {
     display: grid;
     grid-template-areas: "top-logo ." "top-menu top-menu";
-    grid-template-columns: 30% 70%;
+    grid-template-columns: auto auto;
     grid-area: top-nav;
     width: 100%;
     position: relative;
@@ -174,9 +201,12 @@ a [href="/logout"] {
   }
   #top-nav #top-menu {
     display: none;
+    width: 100vw;
     padding: 20px 0;
+    z-index: 1;
     grid-area: top-menu;
     row-gap: 20px;
+    transition: 1s;
     background-color: #0D1821;
   }
   #top-nav #top-menu a {
@@ -186,7 +216,10 @@ a [href="/logout"] {
   }
   #top-nav #top-logo {
     display: grid;
-    grid-template-columns: 40% 60%;
+    height: 9vh;
+    width: 350px;
+    z-index: 2;
+    grid-template-columns: 9vh 70%;
     grid-area: top-logo;
     justify-items: center;
     align-items: center;
@@ -199,12 +232,14 @@ a [href="/logout"] {
   }
   #top-nav h1 {
     margin: 0;
+    font-size: 35pt;
   }
   #top-nav #hamburger {
     position: absolute;
     right: 10px;
     top: 10px;
-    font-size: 20pt;
+    align-self: center;
+    font-size: 45pt;
   }
   #top-nav #hamburger:hover {
     cursor: pointer;
@@ -219,6 +254,73 @@ a [href="/logout"] {
     display: none;
   }
   #right-nav {
+    width: 150px;
+  }
+  #right-nav h1 {
+    margin-top: 20px;
+    font-size: 17pt;
+  }
+  #right-nav #music-suggestion-container {
+    margin-top: 40px;
+  }
+  #right-nav #music-suggestion-container .suggested-song img {
+    width: 90px;
+  }
+  #right-nav #music-suggestion-container .suggested-song h1 {
+    font-size: 13pt;
+  }
+  #right-nav #music-suggestion-container .suggested-song h3 {
+    font-size: 8pt;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #general-container {
+    grid-template-areas: "top-nav" "right-nav" "main";
+    grid-template-rows: 6vh 13vh auto;
+    grid-template-columns: auto;
+  }
+  #top-nav #top-logo {
+    height: 6vh;
+    width: 300px;
+  }
+  #top-nav #top-logo img {
+    height: 4vh;
+  }
+  #top-nav #top-logo h1 {
+    font-size: 30pt;
+  }
+  #top-nav #hamburger {
+    font-size: 30pt;
+  }
+  #right-nav {
+    width: 100vw;
+    padding: 0;
+  }
+  #right-nav h1 {
+    display: none;
+  }
+  #right-nav #music-suggestion-container {
+    width: 100%;
+    margin: 5px 0;
+    grid-template-columns: auto auto auto auto;
+    justify-content: center;
+  }
+  #right-nav #music-suggestion-container .suggested-song {
+    width: 90px;
+  }
+  #right-nav #music-suggestion-container .num-4 {
+    display: none;
+  }
+  #right-nav #music-suggestion-container .suggested-song img {
+    width: 70px;
+  }
+  #right-nav #music-suggestion-container .suggested-song h1 {
+    display: inline;
+    font-size: 10pt;
+    text-overflow: ellipsis;
+  }
+  #right-nav #music-suggestion-container .suggested-song h3 {
     display: none;
   }
 }
