--- a/public/css/search.css
+++ b/public/css/search.css
@@ -12,8 +12,22 @@
 body {
   width: 100vw;
   height: 100vh;
+  font-size: initial;
+  font-family: Raleway;
+  line-height: initial;
   margin: 0;
   background-color: #B4CDED;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Raleway;
+  font-weight: 700;
+  margin: initial;
 }
 
 #top-nav {
@@ -29,10 +43,24 @@ body {
   margin: auto;
 }
 
+#top-nav {
+  display: none;
+}
+
+#general-container {
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  margin: auto;
+  grid-template-areas: "left-nav main right-nav";
+  grid-template-columns: 200px auto 200px;
+  justify-items: center;
+}
+
 #left-nav {
   display: grid;
   grid-area: left-nav;
-  width: 100%;
+  width: 200px;
   height: 100%;
   grid-template-rows: 5% 20% 3% auto auto 5% 5%;
   row-gap: 2vh;
@@ -46,7 +74,11 @@ body {
 }
 
 #left-nav #logo img {
-  width: 50%;
+  width: 130px;
+}
+
+#left-nav #logo h1 {
+  font-size: 25pt;
 }
 
 #left-nav #menu {
@@ -126,18 +158,21 @@ input[type=text]:focus {
 }
 
 #right-nav {
-  width: 100%;
+  width: 200px;
   height: 100%;
-  padding: 20px;
+  padding: 10px;
   grid-area: right-nav;
   background-color: #0D1821;
 }
 
 #right-nav h1 {
+  margin-top: 40px;
   font-size: 20pt;
+  text-align: center;
 }
 
 #right-nav #music-suggestion-container {
+  margin-top: 40px;
   display: grid;
   row-gap: 15px;
 }
@@ -151,7 +186,7 @@ input[type=text]:focus {
 }
 
 #right-nav #music-suggestion-container .suggested-song img {
-  width: 100%;
+  width: 100px;
   border-radius: 7px;
 }
 
@@ -164,50 +199,51 @@ input[type=text]:focus {
 
 #right-nav #music-suggestion-container .suggested-song h3 {
   width: fit-content;
-  margin: 0;
   font-size: 10pt;
   color: #B4CDED;
 }
 
 @media screen and (max-width: 1200px) {
   #general-container {
-    display: grid;
+    overflow-y: hidden;
     height: inherit;
     width: inherit;
     margin: auto;
-    grid-template-areas: "top-nav""right-nav""main";
-    grid-template-columns: auto;
-    grid-template-rows: 10vh auto auto;
+    grid-template-areas: "top-nav top-nav" "main right-nav";
+    grid-template-columns: auto 150px;
+    grid-template-rows: 10vh auto;
     justify-items: center;
   }
-
   #top-nav {
     display: grid;
-    grid-template-areas: "top-logo .""top-menu top-menu";
-    grid-template-columns: 30% 70%;
+    grid-template-areas: "top-logo ." "top-menu top-menu";
+    grid-template-columns: auto auto;
     grid-area: top-nav;
     width: 100%;
     position: relative;
     background-color: #0D1821;
   }
-
   #top-nav #top-menu {
     display: none;
+    width: 100vw;
     padding: 20px 0;
+    z-index: 1;
     grid-area: top-menu;
     row-gap: 20px;
+    transition: 1s;
     background-color: #0D1821;
   }
-
   #top-nav #top-menu a {
     padding-left: 10px;
     text-decoration: none;
     font-size: 17pt;
   }
-
   #top-nav #top-logo {
     display: grid;
-    grid-template-columns: 40% 60%;
+    height: 9vh;
+    width: 350px;
+    z-index: 2;
+    grid-template-columns: 9vh 70%;
     grid-area: top-logo;
     justify-items: center;
     align-items: center;
@@ -215,116 +251,103 @@ input[type=text]:focus {
     font-size: 17px;
     color: #B4CDED;
   }
-
   #top-nav img {
     height: 7vh;
   }
-
   #top-nav h1 {
     margin: 0;
+    font-size: 35pt;
   }
-
   #top-nav #hamburger {
     position: absolute;
     right: 10px;
     top: 10px;
-    font-size: 20pt;
+    align-self: center;
+    font-size: 45pt;
   }
-
   #top-nav #hamburger:hover {
     cursor: pointer;
     background-color: #0D1821;
     color: #B4CDED;
   }
-
   .active {
     background-color: #0D1821;
     color: #B4CDED;
   }
-
   #left-nav {
     display: none;
   }
   #right-nav {
-    display: grid;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    grid-area: right-nav;
-    background-color: #0D1821;
-    grid-template-rows: 10vh auto;
+    width: 150px;
   }
   #right-nav h1 {
-    text-align: left;
+    margin-top: 20px;
+    font-size: 17pt;
   }
   #right-nav #music-suggestion-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
-    grid-gap: 10px;
-  } 
+    margin-top: 40px;
+  }
+  #right-nav #music-suggestion-container .suggested-song img {
+    width: 90px;
+  }
+  #right-nav #music-suggestion-container .suggested-song h1 {
+    font-size: 13pt;
+  }
+  #right-nav #music-suggestion-container .suggested-song h3 {
+    font-size: 8pt;
+  }
 }
 
 @media screen and (max-width: 480px) {
-  
-  #top-nav {
-    grid-template-columns: 50vw auto;
-    grid-area: top-nav;
-    width: 100%;
-    position: relative;
-    background-color: #0D1821;
+  #general-container {
+    grid-template-areas: "top-nav" "right-nav" "main";
+    grid-template-rows: 6vh 13vh auto;
+    grid-template-columns: auto;
   }
-
+  #top-nav #top-logo {
+    height: 6vh;
+    width: 300px;
+  }
   #top-nav #top-logo img {
-    width: 50px;
-    height: 50px;
+    height: 4vh;
   }
-
+  #top-nav #top-logo h1 {
+    font-size: 30pt;
+  }
+  #top-nav #hamburger {
+    font-size: 30pt;
+  }
   #right-nav {
-    padding-top: 0;
-    grid-template-rows: 5vh auto;
-  }
-
-  #right-nav h1 {
-    font-size: 20px;
+    width: 100vw;
     padding: 0;
-    margin-top: auto;
-    margin-bottom: auto;
   }
-
+  #right-nav h1 {
+    display: none;
+  }
   #right-nav #music-suggestion-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
-    grid-gap: 10px;
-  } 
-
-  #right-nav #music-suggestion-container .suggested-song img {
-    width: 60px !important;
-    height: 60px !important;
+    width: 100%;
+    margin: 5px 0;
+    grid-template-columns: auto auto auto auto;
+    justify-content: center;
   }
-
-  #right-nav #music-suggestion-container .suggested-song h1 {
-    font-size: 13px;
-    word-wrap: break-word;
+  #right-nav #music-suggestion-container .suggested-song {
+    width: 90px;
+  }
+  #right-nav #music-suggestion-container .num-4 {
+    display: none;
+  }
+  #right-nav #music-suggestion-container .suggested-song img {
     width: 70px;
   }
-
+  #right-nav #music-suggestion-container .suggested-song h1 {
+    display: inline;
+    font-size: 10pt;
+    text-overflow: ellipsis;
+  }
   #right-nav #music-suggestion-container .suggested-song h3 {
-    font-size: 10px;
+    display: none;
   }
-
-  #general-container {
-    display: grid;
-    height: inherit;
-    width: inherit;
-    margin: auto;
-    grid-template-areas: "top-nav""right-nav""main";
-    grid-template-columns: auto;
-    grid-template-rows: 10vh auto auto;
-    justify-items: center;
-  }
-
   ul.ba {
     list-style-type: none;
   }
-  
 }
