--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -12,28 +12,42 @@
 body {
   width: 100vw;
   height: 100vh;
+  font-size: initial;
+  font-family: Raleway;
+  line-height: initial;
   margin: 0;
   background-color: #B4CDED;
 }
 
-#general-container {
-  display: grid;
-  height: inherit;
-  width: inherit;
-  grid-template-areas: "left-nav main";
-  grid-template-columns: 15% 85%;
-  justify-items: center;
-  margin: auto;
-  overflow-x: hidden;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Raleway;
+  font-weight: 700;
+  margin: initial;
 }
 
 #top-nav {
   display: none;
 }
 
+#general-container {
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  margin: auto;
+  grid-template-areas: "left-nav main";
+  grid-template-columns: 200px auto;
+  justify-items: center;
+}
+
 #left-nav {
   display: grid;
-  width: 100%;
+  grid-area: left-nav;
+  width: 200px;
   height: 100%;
   grid-template-rows: 5% 20% 3% auto auto 5% 5%;
   row-gap: 2vh;
@@ -47,7 +61,11 @@ body {
 }
 
 #left-nav #logo img {
-  width: 50%;
+  width: 130px;
+}
+
+#left-nav #logo h1 {
+  font-size: 25pt;
 }
 
 #left-nav #menu {
@@ -72,7 +90,7 @@ body {
   text-decoration: none;
 }
 
-#left-nav a [href="/logout"] {
+a [href="/logout"] {
   text-decoration: none;
 }
 
@@ -250,20 +268,19 @@ main #Timeline #postForm {
 
 @media screen and (max-width: 1200px) {
   #general-container {
-    display: grid;
+    overflow-y: hidden;
     height: inherit;
     width: inherit;
     margin: auto;
-    grid-template-areas: "top-nav" "main";
-    grid-template-columns: auto;
+    grid-template-areas: "top-nav top-nav" "main main";
+    grid-template-columns: auto 150px;
     grid-template-rows: 10vh auto;
     justify-items: center;
-    overflow-x: hidden;
   }
   #top-nav {
     display: grid;
     grid-template-areas: "top-logo ." "top-menu top-menu";
-    grid-template-columns: 30% 70%;
+    grid-template-columns: auto auto;
     grid-area: top-nav;
     width: 100%;
     position: relative;
@@ -271,10 +288,12 @@ main #Timeline #postForm {
   }
   #top-nav #top-menu {
     display: none;
+    width: 100vw;
     padding: 20px 0;
     z-index: 1;
     grid-area: top-menu;
     row-gap: 20px;
+    transition: 1s;
     background-color: #0D1821;
   }
   #top-nav #top-menu a {
@@ -284,7 +303,10 @@ main #Timeline #postForm {
   }
   #top-nav #top-logo {
     display: grid;
-    grid-template-columns: 40% 60%;
+    height: 9vh;
+    width: 350px;
+    z-index: 2;
+    grid-template-columns: 9vh 70%;
     grid-area: top-logo;
     justify-items: center;
     align-items: center;
@@ -297,12 +319,14 @@ main #Timeline #postForm {
   }
   #top-nav h1 {
     margin: 0;
+    font-size: 35pt;
   }
   #top-nav #hamburger {
     position: absolute;
     right: 10px;
     top: 10px;
-    font-size: 20pt;
+    align-self: center;
+    font-size: 45pt;
   }
   #top-nav #hamburger:hover {
     cursor: pointer;
@@ -348,5 +372,26 @@ main #Timeline #postForm {
   form {
     align-items: center;
     justify-content: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #general-container {
+    grid-template-areas: "top-nav" "right-nav" "main";
+    grid-template-rows: 6vh 13vh auto;
+    grid-template-columns: auto;
+  }
+  #top-nav #top-logo {
+    height: 6vh;
+    width: 300px;
+  }
+  #top-nav #top-logo img {
+    height: 4vh;
+  }
+  #top-nav #top-logo h1 {
+    font-size: 30pt;
+  }
+  #top-nav #hamburger {
+    font-size: 30pt;
   }
 }
