--- a/public/css/songinfo.css
+++ b/public/css/songinfo.css
@@ -104,6 +104,24 @@ main {
   color: #0D1821;
 }
 
+main #song-info h2{
+  color: #0D1821;
+  justify-content: center;
+  align-items: center;
+}
+main #song-info h3{
+  color: #0D1821;
+  justify-content: center;
+  align-items: center;
+}
+
+form h3{
+  color: #0D1821;
+  justify-content: center;
+  align-items: center;
+
+}
+
 main #song-info {
   display: grid;
   width: 70%;
@@ -111,42 +129,64 @@ main #song-info {
 }
 
 main #song-info img {
-  width: 100%;
+  max-width: 75%;
 }
 
 main #song-info a img {
-  width: 20%;
+  max-width: 100px;
   border-radius: 5px;
+}
+
+main #song-info {
+  display: grid;
+  grid-template-columns: auto;
+}
+
+.music-image{
+  padding-top: 25px;
+}
+.links{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+form h3{
+  padding-top: 10px;
 }
 
 
 /* Style buttons */
 
 .btn {
-  background-color: DodgerBlue;
-  /* Blue background */
-  border: none;
-  /* Remove borders */
-  color: white;
-  /* White text */
-  padding: 12px 16px;
-  /* Some padding */
-  font-size: 16px;
-  /* Set a font size */
+  border: 3px solid #ff575a;
+  color: #f0f4ef;
+  background-color: #ff575a;
+  padding: 12px 18px;
+  border-radius: 40px;
+  font-size: 13pt;
+  font-weight: 600;
+}
+.info [type="button"],
+[type="submit"] {
+  padding: 12px 18px;
+  border: 3px solid #ff575a;
+  border-radius: 40px;
+  font-size: 13pt;
+  font-weight: 600;
+  color: #f0f4ef;
+  background-color: #ff575a;
   cursor: pointer;
-  /* Mouse pointer on hover */
 }
 
 
 /* Darker background on mouse-over */
 
-.btn:hover {
+/* .btn:hover {
   background-color: RoyalBlue;
-}
+} */
 
 @media screen and (max-width: 1200px) {
   #general-container {
-    overflow-y: hidden;
+    overflow-x: hidden;
     height: inherit;
     width: inherit;
     margin: auto;
@@ -251,6 +291,22 @@ main #song-info a img {
     align-items: center;
     justify-content: center;
   }
+
+  main #song-info {
+    display: grid;
+    grid-template-columns: auto;
+  }
+
+  .music-image{
+    padding-top: 25px;
+  }
+  .links{
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  form h3{
+    padding-top: 10px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -272,4 +328,20 @@ main #song-info a img {
   #top-nav #hamburger {
     font-size: 30pt;
   }
+  main #song-info {
+    display: grid;
+    grid-template-columns: auto;
+  }
+
+  .music-image{
+    padding-top: 25px;
+  }
+  .links{
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  form h3{
+    padding-top: 10px;
+  }
+
 }
