--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -100,6 +100,7 @@ main {
   grid-template-rows: 30% 30% 40%;
   justify-items: center;
   align-items: center;
+  overflow-y: scroll;
 }
 
 main #profile {
