Added survey to library page Fixed hamburger menu's errors across all pages

--- a/public/css/survey.css
+++ b/public/css/survey.css
@@ -83,6 +83,10 @@ CSS for Modal
   color: #0D1821;
 }
 
+.myBtn{
+  cursor: pointer;
+}
+
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {
