--- a/public/css/main.css
+++ b/public/css/main.css
@@ -230,9 +230,37 @@ main #timeline #post-container .post .comment p {
   background-color: #0D1821;
 }
 
+.make-post{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.input{
+  display: none;
+}
+#postForm{
+  padding:25px;
+}
+#post-btn{
+  padding-top: 10px;
+  justify-content: center;
+  align-items: center;
+  display: grid;
+}
+
+.btn {
+  border: 3px solid #ff575a;
+  color: #f0f4ef;
+  background-color: #ff575a;
+  padding: 12px 18px;
+  border-radius: 40px;
+  font-size: 13pt;
+  font-weight: 600;
+}
+
 @media screen and (max-width: 1200px) {
   #general-container {
-    overflow-y: hidden;
+    overflow-x: hidden;
     height: inherit;
     width: inherit;
     margin: auto;
