--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,7 +28,9 @@ h6 {
   font-family: Raleway;
   font-weight: 700;
   margin: initial;
+  padding-bottom: 10px;
 }
+
 
 #top-nav {
   display: none;
@@ -130,7 +132,7 @@ main #timeline #post-container {
 
 main #timeline #post-container .post {
   display: grid;
-  grid-template-columns: 20% 80%;
+  /* grid-template-columns: 20% 80%; */
   column-gap: 10px;
   padding: 5px;
   border-radius: 10px;
@@ -144,6 +146,7 @@ main #timeline #post-container .post .song {
 }
 
 main #timeline #post-container .post .song img {
+  padding-top: 10px;
   width: 100%;
 }
 
@@ -234,6 +237,7 @@ main #timeline #post-container .post .comment p {
   display: grid;
   justify-content: center;
   align-items: center;
+  font-size: 25px;
 }
 .input{
   display: none;
@@ -256,6 +260,41 @@ main #timeline #post-container .post .comment p {
   border-radius: 40px;
   font-size: 13pt;
   font-weight: 600;
+}
+
+#post-container{
+  padding: 25px;
+}
+
+.review h5{
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.post h5{
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.post p{
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.review p{
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.songimg{
+  padding-top:10px;
+  display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (max-width: 1200px) {
